Login funcionando + telas
Login criptografado funcionando
Criada tela de login com cadastro
Criada Activity para listagem de negociacoes